--- a/Country Information/View/Base.lproj/Main.storyboard
+++ b/Country Information/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tNb-w8-OCY">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JUx-Ic-c5L">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <searchBar key="tableHeaderView" contentMode="redraw" id="5sJ-fN-jsh">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -34,7 +34,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="92.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9SD-9v-U9c">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9SD-9v-U9c">
                                                     <rect key="frame" x="15" y="11" width="345" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="wbf-7P-n4N"/>
@@ -70,11 +70,75 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="01f-1P-BH0"/>
                     <connections>
                         <outlet property="tableview" destination="JUx-Ic-c5L" id="Z0d-Dh-XPm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1020" y="133.5832083958021"/>
+        </scene>
+        <!--Details View Controller-->
+        <scene sceneID="hLM-Lv-PgL">
+            <objects>
+                <viewController storyboardIdentifier="detail" id="Lbn-YO-WZr" customClass="DetailsViewController" customModule="Country_Information" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OdO-ij-IUZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Anu-PD-gO6">
+                                <rect key="frame" x="65" y="65" width="245" height="136"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="136" id="iSS-7J-s4V"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="e3P-un-lfI">
+                                <rect key="frame" x="73" y="226" width="229" height="145"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="145" id="mIl-pk-1R6"/>
+                                </constraints>
+                                <color key="textColor" red="0.44308771764897792" green="0.30009177284948607" blue="0.79270563471502586" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="e3P-un-lfI" firstAttribute="top" secondItem="Anu-PD-gO6" secondAttribute="bottom" constant="25" id="0ib-zY-ZH8"/>
+                            <constraint firstItem="gva-e4-xKO" firstAttribute="trailing" secondItem="e3P-un-lfI" secondAttribute="trailing" constant="73" id="9y8-pq-0Zx"/>
+                            <constraint firstItem="Anu-PD-gO6" firstAttribute="top" secondItem="gva-e4-xKO" secondAttribute="top" constant="45" id="Eeh-UJ-Qy1"/>
+                            <constraint firstItem="Anu-PD-gO6" firstAttribute="leading" secondItem="gva-e4-xKO" secondAttribute="leading" constant="65" id="LwM-uC-aAD"/>
+                            <constraint firstItem="e3P-un-lfI" firstAttribute="leading" secondItem="gva-e4-xKO" secondAttribute="leading" constant="73" id="SHm-rH-Xkf"/>
+                            <constraint firstItem="gva-e4-xKO" firstAttribute="trailing" secondItem="Anu-PD-gO6" secondAttribute="trailing" constant="65" id="mb0-k0-ZJv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="gva-e4-xKO"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageViewer" destination="Anu-PD-gO6" id="wAC-IQ-Ru9"/>
+                        <outlet property="textShower" destination="e3P-un-lfI" id="qWa-04-4Dd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UrI-1e-FdO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1812" y="155.17241379310346"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="KkJ-Cd-PT8">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tNb-w8-OCY" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eMN-fI-FRJ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Tmi-Es-FRk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LaV-Zk-cxf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="80.799999999999997" y="133.5832083958021"/>
         </scene>
